--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ body {
 .cards .card .view {
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: #2C1503;
     border-radius: 25px 0;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.616);
 
