--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
 
 body {
     display: flex;
+    background-color: #2C1503;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
@@ -56,7 +57,7 @@ body {
 .cards .card .view {
     width: 100%;
     height: 100%;
-    background-color: #2C1503;
+    background-color: #4B3713;
     border-radius: 25px 0;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.616);
 
